--- a/src/shared/ui/NavHeader/NavHeader.module.scss
+++ b/src/shared/ui/NavHeader/NavHeader.module.scss
@@ -7,7 +7,7 @@
   flex: 0 1 auto;
   position: relative;
   --extra-top-offset: 24px;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: var(--color-blurred-fade);
   backdrop-filter: saturate(180%) blur(10px);
   //position: absolute;
   //width: 100%;
