--- a/src/shared/ui/Viewport/Viewport.module.scss
+++ b/src/shared/ui/Viewport/Viewport.module.scss
@@ -32,11 +32,13 @@
 }
 .theme-light {
   background-color: var(--color-fill-white);
+  --color-blurred-fade: rgba(255, 255, 255, 0.7);
 }
 .theme-failure {
   background-color: #FC7B83;
   --color-typography-black: #ffffff;
   --color-icon-primary100: #FA4D56;
+  --color-blurred-fade: #FC7B83;
 }
 .wrapper {
   height: var(--viewport-height, 100%);
